Set up sequelize db connection is appropiate

--- a/config/config.json
+++ b/config/config.json
@@ -1,17 +1,8 @@
 {
   "development": {
-    "username": "root",
-    "password": null,
-    "database": "database_development",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
-  },
-  "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "url": "postgres://whmticvt:BW5d2LvELcNnAq9mf3sDjL26qsAxQ5mv@balarama.db.elephantsql.com:5432/whmticvt",
+    "operatorsAliases": "0",
+    "dialect": "postgres"
   },
   "production": {
     "username": "root",
